
<resources>
    <string name="app_name">Lightning Mental Arithmetic</string>
    <string name="goodpoints">Correct</string>
    <string name="badpoints">Errors</string>
    <string name="mark">"?"</string>
    <string name="plus">"+"</string>
    <string name="equal">"="</string>
    <string name="start">Start</string>
    <string name="tuto">Tutorial</string>
    <string name="quit">Exit</string>
    <string name="dialog_title">Are you sure you want to quit?</string>
    <string name="dialog_yes">Yes, quit</string>
    <string name="dialog_no">No, continue</string>
    <string name="begin_dialog_title">Start?</string>
    <string name="begin_dialog_yes">Yes, let"'"s rock</string>
    <string name="begin_dialog_no">No, back to menu</string>
    <string name="finish_dialog_yes">Restart</string>
    <string name="finish_dialog_no">Back to menu</string>
    <string name="total_good_title">Good answers</string>
    <string name="total_bad_title">Errors</string>
    <string name="title_activity_tuto">Tutorial</string>
    <string name="total">Total</string>
    <string name="modeA_button">Mode A</string>
    <string name="modeA_info">Choose a level</string>
    <string name="modeB_button">Mode B</string>
    <string name="modeB_info">Play all levels</string>
    <string name="level1_button">Level 1</string>
    <string name="level1_info">10</string>
    <string name="level2_button">Level 2</string>
    <string name="level2_info">100</string>
    <string name="level3_button">Level 3</string>
    <string name="level3_info">Between 10 and 100</string>
    <string name="level4_button">Level 4</string>
    <string name="level4_info">Between 100 and 1000</string>
    <string name="back">Back</string>
    <string name="what">What do you want to do?</string>
    <string name="timeout_score">Save Highscore</string>
    <string name="timeout_no_score">No Highscore</string>
    <string name="timeout_text">Do you want to save your score?</string>
    <string name="highScore">HighScores</string>
    <string name="nameInput">Name</string>
    <string name="zero">0</string>
    <string name="menuOption">Menu option</string>
    <string name="confirmQuit">All progression will be lost. Are you sure you want to exit?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="allLevels">All levels</string>
    <string name="confirmStart">Start?</string>
    <string name="confirmRestart">Restart?</string>
    <string name="tooMuch">Too much wrong answers!!!</string>
    <string name="outOfTime">Out of time!!!</string>
    <string name="name">Enter your name</string>
</resources>
