<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/holo_blue_light">

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/total_good_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/total_good_title"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/total_good_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:textColor="@android:color/black"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/total_bad_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_bad_title"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/total_bad_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:textColor="@android:color/black"
                android:textSize="20sp" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="250dp"
        android:layout_height="1dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:background="@android:color/black"
        android:orientation="horizontal">

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/linearLayout3"
        android:layout_alignStart="@+id/linearLayout3"
        android:layout_below="@+id/linearLayout3"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="34dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_weight="0.07"
            android:text="@string/total"
            android:textColor="@android:color/background_dark"
            android:textSize="20sp"
            android:layout_marginLeft="20dp" />

        <TextView
            android:id="@+id/totalDialog"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.84"
            android:gravity="end"
            android:textColor="@android:color/background_dark"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="170dp"
        android:orientation="horizontal"
        android:layout_marginLeft="20dp">

        <TextView
            android:id="@+id/textView10"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/timeout_text"
            android:textColor="@android:color/background_dark"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="false"
        android:layout_alignParentStart="false"
        android:layout_marginTop="200dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/no_highScore"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="2dp"
            android:layout_weight="0.1"
            android:padding="20dp"
            android:text="@string/timeout_no_score"
            android:textColor="@android:color/background_light"
            android:layout_marginRight="2dp" />

        <Button
            android:id="@+id/highScore"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="2dp"
            android:layout_weight="0.1"
            android:padding="20dp"
            android:text="@string/timeout_score"
            android:textColor="@android:color/background_light"
            android:layout_marginLeft="2dp" />
    </LinearLayout>

</RelativeLayout>